[refactor/#164] Role 관련 추가사항